--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Useful tools for ops
+====================
 
 long-transaction-killer: lists and kills long transactions on a specified MySQL server
+long-query-killer: lists and kills long running queries on a specified MySQL server
